yaml/time-check-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: time-check
  namespace: devops
spec:
  containers:
    - name: time-check
      image: busybox:latest
      command: [ "sh", "-c", "while true; do date; sleep $TIME_FREQ;done >> /opt/itadmin/time/time-check.log" ]
      volumeMounts:
      - name: log-volume
        mountPath: /opt/itadmin/time
  volumes:
    - name: log-volume
      emptyDir : {}
  restartPolicy: Never
